toolchain/internal/core/analysis/testdata/errors/duplicates/duplicate_const.vdl
// @expect: E803

const maxRetries = 3
const maxRetries = 5
